--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chromedriver": "^74.0.0",
+    "mocha": "^6.1.4",
     "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
